k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqmgr-vue
  labels:
    app: sqmgr-vue
    tier: frontend
spec:
  ports:
    - port: 80
  selector:
    app: sqmgr-vue
    tier: frontend
